# safeagent

./: ._SAFEAGENT_ROADMAP_MASTER_v1.1.md  ._SafeAgent_BeyondWorldClass_W19_W28.docx  ._SafeAgent_Master_Roadmap_W1_W18.docx  ._SafeAgent_Master_Roadmap_W1_W8.docx  ._SafeAgent_NextGen_Roadmap_W9_W18.docx  ._compass_artifact_wf-59b7424c-3e51-4759-b34f-c09f9164e151_text_markdown.md  ._compass_artifact_wf-da15c6c2-508a-49b0-b075-01ffa692d126_text_markdown.md  .ci_trigger_v2  .gitignore  CHANGELOG.md  Cargo.toml  DESKTOP_BUILD.md  Dockerfile  GOVERNANCE.md  Justfile  README.md  SAFEAGENT_ROADMAP_MASTER_v1.1.md  SECURITY.md  SafeAgent_BeyondWorldClass_W19_W28.docx  SafeAgent_Master_Roadmap_W1_W18.docx  SafeAgent_Master_Roadmap_W1_W8.docx  SafeAgent_NextGen_Roadmap_W9_W18.docx  compass_artifact_wf-59b7424c-3e51-4759-b34f-c09f9164e151_text_markdown.md  compass_artifact_wf-da15c6c2-508a-49b0-b075-01ffa692d126_text_markdown.md  fly.toml  metadata.json  mixed_20.jsonl  tree.txt
.claude/worktrees/hardcore-turing/: ._target  .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  SAFEAGENT_ROADMAP__10_.md  docker-compose.yml  railway.toml
.claude/worktrees/hardcore-turing/.github/workflows/: platform-v2.yml  release.yml
.claude/worktrees/hardcore-turing/chaos_scenarios/: CH-D-001.yaml  CH-D-002.yaml  CH-D-003.yaml  CH-E-001.yaml  CH-E-002.yaml  CH-E-003.yaml  CH-R-001.yaml  CH-S-001.yaml  CH-S-002.yaml  CH-T-001.yaml  CH-T-003.yaml
.claude/worktrees/hardcore-turing/crates/a2a-gateway/: Cargo.toml
.claude/worktrees/hardcore-turing/crates/advanced-guardrails/: Cargo.toml
.claude/worktrees/hardcore-turing/crates/agent-mesh/: Cargo.toml
.claude/worktrees/hardcore-turing/crates/agentic-trust/: Cargo.toml
.claude/worktrees/hardcore-turing/crates/capability-tokens/: Cargo.toml
.claude/worktrees/hardcore-turing/crates/cbra-scoring/: Cargo.toml
.claude/worktrees/hardcore-turing/crates/cedar-bridge/: Cargo.toml
.claude/worktrees/hardcore-turing/crates/competitive-gap/: Cargo.toml
.claude/worktrees/hardcore-turing/crates/compliance-engine/: Cargo.toml
.claude/worktrees/hardcore-turing/crates/confidential-compute/: Cargo.toml
.claude/worktrees/hardcore-turing/crates/cost-attribution/: Cargo.toml
.claude/worktrees/hardcore-turing/crates/counterfactual-explain/: Cargo.toml
.claude/worktrees/hardcore-turing/crates/credential-vault/: Cargo.toml
.claude/worktrees/hardcore-turing/crates/cross-jurisdiction/: Cargo.toml
.claude/worktrees/hardcore-turing/crates/cross-protocol-authz/: Cargo.toml
.claude/worktrees/hardcore-turing/crates/csa-star-toolkit/: Cargo.toml
.claude/worktrees/hardcore-turing/crates/delegation/: Cargo.toml
.claude/worktrees/hardcore-turing/crates/dep-graph/: Cargo.toml
.claude/worktrees/hardcore-turing/crates/deploy/: Cargo.toml
.claude/worktrees/hardcore-turing/crates/fleet/: Cargo.toml
.claude/worktrees/hardcore-turing/crates/gateway/: Cargo.toml
.claude/worktrees/hardcore-turing/desktop/: Cargo.toml  tauri.conf.json
.claude/worktrees/hardcore-turing/desktop-ui/: index.html
.claude/worktrees/hardcore-turing/docs/: ARCHITECTURE_WHITEPAPER.md  INCIDENT_RESPONSE.md  QUICKSTART_DEMO.md  TROUBLESHOOTING.md  VERSIONING.md
.claude/worktrees/hardcore-turing/eval/: eval_routing.rs
.claude/worktrees/hardcore-turing/examples/: config-economy.toml
.claude/worktrees/hardcore-turing/red_team_scenarios/: RT-D-002.yaml  RT-D-003.yaml  RT-E-001.yaml  RT-E-002.yaml  RT-E-003-1.yaml  RT-E-003-2.yaml  RT-I-001.yaml  RT-R-001.yaml  RT-R-002.yaml  RT-S-001.yaml  RT-S-002.yaml  RT-T-002-1.yaml
.claude/worktrees/hardcore-turing/tests/: redaction_ci_test.sh
crates/audit-log/: Cargo.toml
crates/audit-log/src/: hashchain.rs  lib.rs
crates/bridges/common/: Cargo.toml
crates/bridges/common/src/: lib.rs
crates/bridges/telegram/: Cargo.toml
crates/bridges/telegram/src/: lib.rs
crates/cost-ledger/: Cargo.toml
crates/cost-ledger/src/: lib.rs
crates/gateway/: ._Cargo.toml  Cargo.toml
crates/gateway/src/: circuit_breaker.rs  cmd_audit.rs  cmd_doctor.rs  cmd_export.rs  cmd_export_logs.rs  cmd_init.rs  cmd_stats.rs  config.rs  encryption.rs  main.rs  pricing.rs  providers.rs  shutdown.rs  skill_dispatch.rs
crates/gateway/tests/: integration_test.rs
crates/llm-router/: ._reference_embeddings.json  Cargo.toml  parallel_generator.py
crates/llm-router/src/: lib.rs
crates/memory/: Cargo.toml
crates/memory/src/: lib.rs
crates/policy-engine/: Cargo.toml
crates/policy-engine/src/: lib.rs
crates/sdk-rust/: Cargo.toml
crates/sdk-rust/examples/: rust_client_execute.rs
crates/sdk-rust/src/: lib.rs
crates/security-harness/: Cargo.toml
crates/security-harness/src/: chaos.rs  red_team.rs
crates/skill-registry/: Cargo.toml
crates/skill-registry-server/: Cargo.toml
crates/skill-registry-server/src/: lib.rs  main.rs
crates/skill-registry-server/tests/: registry_integration.rs
crates/skill-registry/src/: lib.rs  main.rs
crates/skills/: Cargo.toml
crates/skills/src/: browser_control.rs  calendar_reader.rs  calendar_writer.rs  email_reader.rs  email_sender.rs  file_reader.rs  file_writer.rs  google_oauth.rs  image_processor.rs  lib.rs  shell_executor.rs  url_fetcher.rs  voice.rs  web_search.rs
crates/stride-testgen/: Cargo.toml
crates/stride-testgen/src/: main.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
crates/web-ui/: Cargo.toml
crates/web-ui/src/: lib.rs  mcp.rs
desktop/: Cargo.toml  tauri.conf.json
desktop/icons/: generate_icon.sh
desktop/src/: main.rs  support.rs  update.rs
platform/control-plane/: Cargo.toml
platform/control-plane/src/: keys.rs  lib.rs  main.rs  rate_limiter.rs
platform/control-plane/tests/: mtls.rs
platform/lab/jailbreak-fuzzer/: Cargo.toml
platform/lab/jailbreak-fuzzer/src/: lib.rs  main.rs
platform/shared/shared-secrets/: Cargo.toml
platform/shared/shared-secrets/src/: lib.rs
platform/worker/skills-sdk/: Cargo.toml
platform/worker/skills-sdk/examples/: custom_skill.rs
platform/worker/skills-sdk/src/: lib.rs
(+314 files in other folders)
