[workspace]
resolver = "2"
members = [
    "crates/gateway",
    "crates/bridges/common",
    "crates/bridges/telegram",
    "crates/policy-engine",
    "crates/prompt-guard",
    "crates/llm-router",
    "crates/credential-vault",
    "crates/memory",
    "crates/cost-ledger",
    "crates/audit-log",
    "crates/skills",
    "crates/web-ui",
    "crates/multi-user",
    "desktop",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
dashmap = "6"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
