[package]
name = "safeagent-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
regex = "1"
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
zip = "2"
rcgen = "0.13"
safeagent-shared-proto = { path = "../platform/shared/shared-proto" }
safeagent-skill-registry = { path = "../crates/skill-registry" }

[build-dependencies]
tauri-build = { version = "2", features = [] }
