[package]
name = "safeagent-audit-log"
version.workspace = true
edition.workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
regex = "1"
