[package]
name = "safeagent-audit-log"
version.workspace = true
edition.workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
regex = "1"
