[package]
name = "safeagent-audit-log"
version.workspace = true
edition.workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
regex = "1"
sha2 = "0.10"
hex = "0.4"
uuid = { workspace = true }

[[bin]]
name = "audit_verify"
path = "src/bin/audit_verify.rs"

[[bin]]
name = "audit_fixture"
path = "src/bin/audit_fixture.rs"
