[package]
name = "safeagent-skill-registry"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "skill"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
base64 = "0.22"
flate2 = "1"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
toml = "0.8"
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking", "multipart"] }
tempfile = "3"
