[package]
name = "safeagent-skills"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1"
anyhow = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
regex = "1"
async-imap = "0.10"
async-native-tls = "0.5"
futures = "0.3"
base64 = "0.22"
mailparse = "0.15"
