[package]
name = "safeagent-stride-testgen"
version.workspace = true
edition.workspace = true

[[bin]]
name = "stride-testgen"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
