[package]
name = "safeagent-telemetry"
version.workspace = true
edition.workspace = true

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }

# OpenTelemetry
opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "trace"] }
tracing-opentelemetry = "0.28"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
