[package]
name = "safeagent-control-plane"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["."]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
ed25519-dalek = "2"
rand = "0.8"
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time"] }
tower = "0.4"
hex = "0.4"
hyper = "1"
hyper-util = { version = "0.1", features = ["tokio"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "tls12", "ring", "logging", "native-tokio", "webpki-tokio"] }
http-body-util = "0.1"
dashmap = "5"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }

safeagent-shared-proto = { path = "../shared/shared-proto" }
safeagent-shared-identity = { path = "../shared/shared-identity" }
safeagent-shared-errors = { path = "../shared/shared-errors" }
safeagent-shared-secrets = { path = "../shared/shared-secrets" }
safeagent-worker = { path = "../worker" }

[dev-dependencies]
rcgen = "0.13"
http-body-util = "0.1"
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "tls12", "ring", "logging", "native-tokio", "webpki-tokio"] }
