[package]
name = "safeagent-bridge-telegram"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
thiserror.workspace = true
async-trait.workspace = true
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

safeagent-bridge-common = { path = "../common" }
