[package]
name = "safeagent-jailbreak-fuzzer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jailbreak-fuzzer"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

safeagent-prompt-guard = { path = "../../../crates/prompt-guard" }
safeagent-policy-engine = { path = "../../../crates/policy-engine" }

[workspace]
