[package]
name = "safeagent-skills-sdk"
version = "0.1.0"
edition = "2021"

[lib]
name = "safeagent_skills_sdk"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
