[package]
name = "safeagent-a2a-gateway"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
dashmap.workspace = true
regex = "1"
