[package]
name = "safeagent-cedar-bridge"
version.workspace = true
edition.workspace = true

[dependencies]
cedar-policy = "3"
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono = { version = "0.4", features = ["serde"] }

safeagent-policy-engine = { path = "../policy-engine" }
